Mooved Flash messages to botom to prevent page jumping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,3 +52,8 @@ h3 {
     font-weight: 400;
     font-size: 2.92rem;
 }
+
+.text-shadow {
+    border-radius: 25px;
+    
+}
